--- a/java/pom.xml
+++ b/java/pom.xml
@@ -43,6 +43,20 @@
       <artifactId>qdox</artifactId>
       <version>2.0-M3</version>
     </dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+	<dependency>
+		<groupId>org.apache.kafka</groupId>
+		<artifactId>kafka-clients</artifactId>
+		<version>3.3.1</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams -->
+	<dependency>
+		<groupId>org.apache.kafka</groupId>
+		<artifactId>kafka-streams</artifactId>
+		<version>3.3.1</version>
+	</dependency>
+
 
   </dependencies>
 
